# grn-confound-audit

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  requirements.txt
data/class1_technical/: all_results.json  phase2_kidney_results.json  phase2_leakage_correction_results.json  phase2_perturbation_combined_Immune.csv
data/class2_proximity/: external_replication_proximity_curves.csv  proximity_bias_curves.csv
data/class3_topological/: null_calibration_summary.csv
grn_confound_audit/: __init__.py  cli.py  pipeline.py  proximity.py  technical.py  topological.py
scripts/: generate_figures.py
