[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "grn-confound-audit"
version = "0.1.0"
description = "Three-class confound audit for gene regulatory networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ihor Kendiukhov", email = "kenduhov.ig@gmail.com"},
]
keywords = [
    "gene regulatory network",
    "confounding",
    "batch effect",
    "single-cell RNA-seq",
    "bias audit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
]

[project.scripts]
grn-confound-audit = "grn_confound_audit.cli:main"

[project.urls]
Repository = "https://github.com/Biodyn-AI/grn-confound-audit"

[tool.setuptools.packages.find]
include = ["grn_confound_audit*"]
